--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,11 @@
 /* Add CSS Styling */
+
+.avatar.proportioned {
+    width: 300px;
+    height: aspect-ratio ;
+}
+
+.avatar.distorted {
+    width: 200px;
+    height: 400px;
+}
